--- a/facebook.html
+++ b/facebook.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="https://www.facebook.com/gustavoguanabara/" target="_blank">Acesse</a>
+    <img src="imagens/Facebook.JPG" alt="Facebook">
+    <a href="https://m.facebook.com/diego.rosa.drummer/" target="_blank">Acesse</a>
 </body>
 </html>
