--- a/github.html
+++ b/github.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="Github">
-    <a href="https://github.com/gustavoguanabara" target="_blank">Acesse</a>
+    <img src="imagens/Github.JPG" alt="Github">
+    <a href="https://github.com/Devdiegorosa" target="_blank">Acesse</a>
 </body>
 </html>
