--- a/instagram.html
+++ b/instagram.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="Instagram">
-    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">Acesse</a>
+    <img src="imagens/Instagram.JPG" alt="Instagram">
+    <a href="https://www.instagram.com/diego.rosa.drummer/" target="_blank">Acesse</a>
 </body>
 </html>
