--- a/youtube.html
+++ b/youtube.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="Youtube">
-    <a href="https://www.youtube.com/@cursoemvideo/playlists" target="_blank">Acesse</a>
+    <img src="imagens/Youtube.JPG" alt="Youtube">
+    <a href="https://www.youtube.com/@diego.rosa.drummer" target="_blank">Acesse</a>
 </body>
 </html>
